# Drone-Footprints

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  dockerfile  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tester9.py
.github/workflows/: python-package-all-os.yml  python-package-ubuntu.yml
drone_fp/: Calculate_Footprints.py  Create_GeoTiffs.py  Create_Polygons.py  Drone_Footprints.py  Footprint_Calculator.py  Footprint_Calculator_FG.py  Footprint_Calculator_G.py  Footprint_Calculator_ver3.py  RTK_Process.py  __init__.py  coordinate_conversions.py  drone_footprint_calculator.py  drone_fp.py  drone_fp_new.py  drone_nadir.py  drone_sensors.csv  geospatial_calculations.py  new_quads.py  off_nadir.py  poly_make_two.py  quaternion_process.py  testcon.py  tester.py
drone_fp/Archieve/: drone_fp.py  drone_nadir.py  new_quads.py  off_nadir.py  poly_cal.py  poly_make_two.py  quaternion_process.py  sensor_size.py  test3.py  tester9.py
src/: Bbox_calculations.py  Drone_Footprints.py  FOV_prep.py  RTK_Process.py  Untitled 2.numbers  __init__.py  api.py  coordinate_conversions.py  create_geojson.py  create_geotiffs.py  create_raster.py  drone_sensors.csv  extract_video_meta.py  fov_calculations.py  geospatial_calculations.py  geospatial_calculations_nadir.py  geospatial_calculations_nonnadir.py  geospatial_conversions.py  imagedrone.py  logger_config.py  meta_data.py  metadata_dump.txt  new_fov.py  new_quads.py  process_raster.py  runner.py  sensor_data.py  utils.py  websocket_client.py
src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+90 files in other folders)
