[project]
name = "drone-footprints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse~=1.4.0",
    "asyncio>=4.0.0",
    "datetime~=5.4",
    "geojson~=3.1.0",
    "geojson-rewind>=1.2.1",
    "geometry>=0.0.23",
    "geopandas>=1.1.3",
    "geopy~=2.4.1",
    "gps-time>=3.0.0",
    "lensfunpy~=1.18.0",
    "loguru~=0.7.2",
    "magnetic-field-calculator~=1.0.2",
    "magnetismi~=2022.10.9",
    "mpmath~=1.3.0",
    "numpy>=1.26.3",
    "numpy-quaternion~=2024.0.13",
    "opencv-python>=4.10.0",
    "pandas>=3.0.1",
    "pillow>=11.0.0",
    "pyexiftool>=0.5.6",
    "pyproj>=3.5.0,<3.6.0 ; python_full_version < '3.12'",
    "pyproj>=3.6.0 ; python_full_version >= '3.12'",
    "rasterio~=1.3.9",
    "rio-cogeo~=5.3.0",
    "scikit-image>=0.25.0",
    "setuptools>=71.0.0",
    "shapely~=2.0.2",
    "sympy~=1.9.0",
    "tqdm~=4.66.2",
    "utm~=0.7.0",
    "vector3d~=1.1.1",
    "vmem~=1.0.2",
    "websocket-client>=1.9.0",
    "wheel>=0.43.0",
]
